force-app/main/default/objects/Training__c/fields/Data_End__c.field-meta.xml
<CustomField>
    <fullName>Data_End__c</fullName>
    <label>Data End</label>
    <type>Date</type>
</CustomField>