force-app/main/default/objects/Training__c/fields/Data_Start__c.field-meta.xml
<CustomField>
    <fullName>Data_Start__c</fullName>
    <label>Data Start</label>
    <type>Date</type>
</CustomField>