force-app/main/default/objects/Training__c/fields/Enrolled_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Count__c</fullName>
    <label>Enrolled Count</label>
    <summaryFilterItems>
        <field>Enrollment__c.Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrollment__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>