force-app/main/default/objects/Training__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>Online/Stationary</description>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stationary</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>