force-app/main/default/objects/Training__c/fields/Free_Spots__c.field-meta.xml
<CustomField>
    <fullName>Free_Spots__c</fullName>
    <formula>Max_Participants__c - Enrolled_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Spots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>