force-app/main/default/objects/Training__c/fields/Localization__c.field-meta.xml
<CustomField>
    <fullName>Localization__c</fullName>
    <label>Localization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>