force-app/main/default/objects/Training__c/fields/Max_Participans_number__c.field-meta.xml
<CustomField>
    <fullName>Max_Participans_number__c</fullName>
    <label>Max Participants number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>