force-app/main/default/objects/Training__c/fields/Prerequisite_Info__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Info__c</fullName>
    <label>Prerequisite Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>