force-app/main/default/objects/Training__c/validationRules/RoomCapacityValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>RoomCapacityValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Room__c)),
Max_Participants__c &gt; Room__r.Max_Capacity__c
)</errorConditionFormula>
    <errorDisplayField>Max_Participants__c</errorDisplayField>
    <errorMessage>Training exceeds room capacity</errorMessage>
</ValidationRule>